# AI_TEST

./: .gitignore  ARCHITECTURE.md  DATADOG.md  README.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_suggested_models.py  a91d3e5f8c02_attachments.py  b3f2a91c7d54_agent_run_limits.py  c876dcb5b44b_initial_schema.py  d5b9e0173a4c_custom_tools.py  e7c41f6a2b98_run_time_saved.py  f4a8c2d91e63_run_datadog_sync.py
backend/app/: attachments.py  config.py  datadog.py  db.py  events.py  llm.py  main.py  models.py  portability.py  runner.py  schemas.py  templates.py
backend/app/graph/: builder.py  nodes.py  spec.py  state.py
backend/app/routers/: agents.py  attachments.py  fs.py  meta.py  metrics.py  models.py  runs.py  tools.py  workflows.py
backend/app/tools/: __init__.py  _pyrunner.py  fs.py  generate.py  github.py  gitops.py  pyexec.py  registry.py  shell.py
backend/tests/: conftest.py  test_agent_loop.py  test_attachments.py  test_datadog.py  test_fs_jail.py  test_github.py  test_gitops.py  test_graph_spec.py  test_loop_guard.py  test_node_helpers.py  test_orchestrator.py  test_portability.py  test_registry.py  test_runs_api.py  test_shell.py  test_templates.py  test_tool_node_approval.py
docs/: ARCHITECTURE.md  DATABASE.md  TODO.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  OverflowMenu.tsx  SettingsMenu.tsx  api.ts  main.tsx  styles.css  theme.ts  types.ts
frontend/src/components/: AttachmentsEditor.tsx  DirectoryPicker.tsx  (+2 more)
(+10 files in other folders)
