[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.5",
    "anthropic>=0.117.0",
    "fastapi>=0.139.2",
    "greenlet>=3.5.3",
    "httpx>=0.28",
    "langgraph>=1.2.9",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "-q"
filterwarnings = [
    # LangGraph/pydantic can emit deprecation noise; keep test output clean.
    "ignore::DeprecationWarning",
]
